--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="script.js"></script>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <h1>Weather App</h1>
-    <input type="search" />
-    <button>Search</button>
+    <input type="text" id="inputBox" />
+    <button id="search">Search</button>
     <div id="weather">
       <h2 id="city">City Name</h2>
       <img id="icon" />
@@ -19,5 +18,6 @@
       <p id="humidity">Humidity</p>
       <p id="wind">Wind speed</p>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
