--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
       <p id="humidity">Humidity</p>
       <p id="wind">Wind speed</p>
     </div>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
   </body>
 </html>
