--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         placeholder="Enter city name, postal code, or coords..."
       />
       <button id="locateButton">L</button>
-      <button id="searchButton">S</button>
+      <button id="searchButton"></button>
     </div>
     <div id="weather">
       <img id="icon" />
