More Styling: Added styling to the input section, created container for the weather display section.

--- a/index.html
+++ b/index.html
@@ -12,23 +12,28 @@
       <h2 id="projectDesc">API Portfolio Project</h2>
     </div>
     <div id="inputBlock">
-      <input
-        type="text"
-        id="inputBox"
-        placeholder="Enter city name, postal code, or coords..."
-      />
-      <button id="locateButton">L</button>
-      <button id="searchButton"></button>
+      <div id="inputSection">
+        <input
+          type="text"
+          id="inputBox"
+          placeholder="Enter city name, postal code, or coords..."
+        />
+        <button id="locateButton"></button>
+        <button id="searchButton"></button>
+      </div>
     </div>
-    <div id="weather">
-      <img id="icon" />
-      <h2 id="city">City Name</h2>
-      <p id="temp">Temperature</p>
+    <div id="weatherSection">
+      <div id="weather">
+        <img id="icon" />
+        <h2 id="city">City Name</h2>
+        <p id="temp">Temperature</p>
+      </div>
+      <div id="details">
+        <p id="wind">Wind speed</p>
+        <p id="feelsLike">Feels Like</p>
+      </div>
     </div>
-    <div id="details">
-      <p id="wind">Wind speed</p>
-      <p id="feelsLike">Feels Like</p>
-    </div>
+
     <script type="module" src="script.js"></script>
   </body>
 </html>
